pkginclude_HEADERS = \
	app.h \
	exceptions.h \
	resources.h \
	routing.h \
	sessions.h \
	template-helpers.h \
	wrappers.h

noinst_HEADERS = \
	app-private.h \
	cgi-private.h \
	datetime-private.h \
	exceptions-private.h \
	httpd-private.h \
	resources-private.h \
	routing-private.h \
	sessions-private.h \
	utils-private.h \
	wrappers-private.h
